Fix Qt::NoContextMenu policy handling in QWebEngineView

Task-number: QTBUG-62345
Change-Id: I4846e15f007c6792ad02fc49179a6e30deafa4c7
Reviewed-by: Peter Varga <pvarga@inf.u-szeged.hu>
Reviewed-by: Joerg Bornemann <joerg.bornemann@qt.io>